--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ target/
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
+.idea/vcs.xml
 .idea/compiler.xml
 .idea/libraries/
 *.iws
